# Projekt

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  ProjectConfig.h.in  README.md  Upute  jaccard.py  mini_out.paf  test.txt  transport  travis.yml
ecoliPaket/: huffmandekoder.c  tablica.txt
libraries/Common/: CMakeLists.txt  Common.cpp  Common.h  Common.hpp  complement.cpp
libraries/CustomTypes/: CMakeLists.txt  CustomTypes.cpp  CustomTypes.h
libraries/Dynamic/: CMakeLists.txt  Dynamic.cpp  Dynamic.h
libraries/FASTARead/: CMakeLists.txt  FASTARead.cpp  FASTARead.h
libraries/PAF/: paf.c  paf.h
libraries/bioparser/: CMakeLists.txt
libraries/lcskpp_pavetic/: CMakeLists.txt  lcskpp.cpp  lcskpp.h  test_lcskpp.cpp
libraries/threadpool/: CMakeLists.txt
scripts/: buildSimple.sh  cmake_clean.sh  rebuild.sh
src/: .kmerFinderSample.cpp.swp  FASTASampleClass.cpp  LISSample.cpp  dynamicSample.cpp  fastaSample.cpp  fopenSample.cpp  kmerFinderSample.cpp  kmerFinderSample.cpp.save  kmer_finder.cpp  lcskppMinimizersForMathces.cpp  lcskppSample.cpp  mapper.cpp  mapper_dynamic.cpp  mapper_parallel.cpp  mapper_testing.cpp  mapper_v1.cpp  mapper_v2.cpp  mapper_v3.cpp  optimizationTest.cpp  sample.cpp  vectorSample.cpp
src/resources/: sample.fasta
testing/: CMakeLists.txt
testing/basic_tests/: CMakeLists.txt  check_complements.cpp
testing/dynamic_tests/: CMakeLists.txt  LCSTests.cpp
